syntax = "proto3";

package infraboard.mflow.pipeline;
option go_package = "github.com/infraboard/mflow/apps/pipeline";

import "mflow/apps/pipeline/pb/pipeline.proto";
import "mcube/pb/page/page.proto";
import "mcube/pb/request/request.proto";
import "mcube/pb/resource/meta.proto";
import "mcube/pb/resource/label.proto";

// RPC Pipeline管理
service RPC {
    // 查询Pipeline列表
    rpc QueryPipeline(QueryPipelineRequest) returns(PipelineSet);
    // 查询Pipeline详情
    rpc DescribePipeline(DescribePipelineRequest) returns(Pipeline);
    // 创建Pipeline
    rpc CreatePipeline(CreatePipelineRequest) returns(Pipeline);
    // 更新Pipeline
    rpc UpdatePipeline(UpdatePipelineRequest) returns(Pipeline);
    // 删除Pipeline
    rpc DeletePipeline(DeletePipelineRequest) returns(Pipeline);
}

message QueryPipelineRequest {
    // 资源范围
    // @gotags: json:"scope"
    mcube.resource.Scope scope = 1;
    // 资源标签过滤
    // @gotags: json:"filters"
    repeated mcube.resource.LabelRequirement filters = 2;
    // 分页请求
    // @gotags: json:"page"
    infraboard.mcube.page.PageRequest page = 3;
	// 是否是模版, 用于快速继承模版参数进行修改, 模版不能用于执行
	// @gotags: json:"is_template"
	optional bool is_template = 4;
    // pipeline Id列表
    // @gotags: json:"ids"
    repeated string ids = 15;
    // 是否关联查询出job
	// @gotags: json:"with_job"
    bool with_job = 5;
    // 添加自定义变量占位符
	// @gotags: json:"with_inject_params"
    bool with_inject_params = 6;
}

message DescribePipelineRequest {
    // pipeline id
	// @gotags: json:"id"
    string id = 1;
    // 是否关联查询出job
	// @gotags: json:"with_job"
    bool with_job = 2;
}

message UpdatePipelineRequest {
    // pipeline id
	// @gotags: json:"id"
    string id = 1;
    // 更新模式
    // @gotags: json:"update_mode"
    infraboard.mcube.request.UpdateMode update_mode = 2;
    // 更新人
    // @gotags: json:"update_by"
    string update_by = 3;
    // 更新时间
    // @gotags: json:"update_at"
    int64 update_at = 4;
    // 定义
    // @gotags: json:"spec"
    CreatePipelineRequest spec = 5;
}

message DeletePipelineRequest {
    // pipeline id
	// @gotags: json:"id"
    string id = 1;
}